mariadb-standalone/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mariadb-standalone
  namespace: mariadb-standalone
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              networkClass: Database
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: phpmyadmin
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: vaultwarden
      ports:
        - port: 3306
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: ucdialplans
      ports:
        - port: 3306
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
